# miguelhenriques

backend/: Cargo.toml  test
backend/migrations/2021-01-24-230458_create_project/: up.sql
backend/migrations/2021-01-27-164311_create_users/: up.sql
backend/migrations/2021-01-28-150245_create_login_history/: down.sql  up.sql
backend/src/: email_service.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs
backend/src/middlewares/: authentication_middleware.rs
backend/src/models/: login_history.rs  mod.rs  project.rs  user.rs  user_token.rs
backend/src/services/: account_service.rs  mod.rs
frontend/: .eslintcache  Dockerfile  package-lock.json  package.json
frontend/src/: api.ts  api.tsx  hooks.tsx  index.tsx  types.ts  types.tsx
frontend/src/admin/: Admin.tsx
frontend/src/components/: ProjectCard.tsx
frontend/src/containers/: App.tsx  Navbar.tsx  ProjectsList.tsx
frontend/src/pages/: ContactMe.tsx  Home.tsx  Project.tsx  ProjectPage.tsx  Projects.tsx
frontend/src/static/: App.css  ContactMe.css  Navbar.css  ProjectCard.css  ProjectsList.css
