[package]
name = "backend"
version = "0.1.0"
authors = ["Mik322 <mchsa@iscte-iul.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5.2"
serde = "1.0.121"
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
